"Done" with video about generics. Only one problem. No "error" message when adding same email.

--- a/MainApp/MainApp.csproj
+++ b/MainApp/MainApp.csproj
@@ -8,8 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
-    <Folder Include="Services\" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
